--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Shuwei Zhou"
-  avatar           : "images/android-chrome-512x512.png"
+  avatar           : "images/Shuwei_avatar.jpg"
   bio              : "RWTH Aachen University"
   location         : "Aachen, Germany"
   employer         : "Institute of Metal Forming, RWTH Aachen University"
